--- a/theme/css/my.css
+++ b/theme/css/my.css
@@ -1,4 +1,16 @@
-th {
+td,th {
    padding: 4px;
+}
+.output {
+  margin-bottom: 20px;
+}
+.show-hide {
+  color: #fff;
+  background-color: #5bc0de;
+  border: 1px solid transparent;
+  border-color: #46b8da;
+  border-radius: 4px;
+  padding: 8px;
+  margin-bottom: 5px;
 }
 	
